# Ecommerce-Shopping-Assistant

./: .gitignore  Dockerfile  README.md  get_lib_versions.py  main.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflows/: deploy.yml  infra.yml
data/: product_reviews.csv
infra/: eks_with_ecr.yml
k8/: deployment.yml  service.yml
notebook/: experiment.ipynb
shopping_assistant/config/: config.yaml
shopping_assistant/etl/: data_ingestion.py  data_scrapper.py
shopping_assistant/exception/: custom_exception.py
shopping_assistant/logger/: __init__.py
shopping_assistant/mcp/: client.py  rag_server.py
shopping_assistant/retriever/: retrieval.py
shopping_assistant/router/: main.py
shopping_assistant/utils/: api_key_manager.py  config_loader.py  model_loader.py
shopping_assistant/workflow/: agentic_rag_with_mcp.py  agentic_rag_with_mcp_tools.py  agentic_rag_workflow.py
templates/: index.html
